// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailVerification /> snapshots renders correctly when not verified 1`] = `
<View
  style={{}}
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "overflow": "hidden",
        }
      }
      testID="RNE__ICON__CONTAINER"
    >
      <View
        accessibilityRole="button"
        android_ripple={
          {
            "borderless": false,
            "color": "rgba(0, 0, 0, 0.3)",
            "radius": -5,
          }
        }
        disabled={false}
        replaceTheme={[Function]}
        testID="RNE__ICON__CONTAINER_ACTION"
        updateTheme={[Function]}
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "justifyContent": "center",
            }
          }
          testID="RNE__ICON"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#242424",
                  "fontSize": 24,
                },
                {
                  "backgroundColor": "transparent",
                  "color": "#ff3b30",
                  "marginRight": 3.142857142857143,
                },
                {
                  "fontFamily": "material",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            testID="RNE__ICON__Component"
          >
            
          </Text>
        </View>
      </View>
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#242424",
          "fontFamily": undefined,
          "fontSize": 23.57142857142857,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginBottom": 0,
          "textAlign": "left",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
        }
      }
    >
      Email Not Verified   -
    </Text>
    <View
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 3.142857142857143,
          },
          undefined,
          false,
        ]
      }
      testID="RNE_BUTTON_WRAPPER"
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#007aff",
              "borderRadius": 3.142857142857143,
              "borderWidth": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 12.571428571428571,
              "paddingHorizontal": 14.571428571428571,
            }
          }
        >
          <Text
            style={
              {
                "color": "#007aff",
                "fontSize": 18,
                "paddingVertical": 1,
                "textAlign": "left",
              }
            }
          >
            Resend Email
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<EmailVerification /> snapshots renders correctly when not visible 1`] = `null`;

exports[`<EmailVerification /> snapshots renders correctly when verified and visible 1`] = `
<View
  style={{}}
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "overflow": "hidden",
        }
      }
      testID="RNE__ICON__CONTAINER"
    >
      <View
        accessibilityRole="button"
        android_ripple={
          {
            "borderless": false,
            "color": "rgba(0, 0, 0, 0.3)",
            "radius": -5,
          }
        }
        disabled={false}
        replaceTheme={[Function]}
        testID="RNE__ICON__CONTAINER_ACTION"
        updateTheme={[Function]}
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "justifyContent": "center",
            }
          }
          testID="RNE__ICON"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#242424",
                  "fontSize": 24,
                },
                {
                  "backgroundColor": "transparent",
                  "color": "#4cd964",
                  "marginRight": 3.142857142857143,
                },
                {
                  "fontFamily": "material",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            testID="RNE__ICON__Component"
          >
            
          </Text>
        </View>
      </View>
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#242424",
          "fontFamily": undefined,
          "fontSize": 23.57142857142857,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginBottom": 0,
          "textAlign": "left",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
        }
      }
    >
      Email Verified
    </Text>
  </View>
</View>
`;
